--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="fr-fr"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Sedna - A Free HTML5/CSS3 website by Peter Finlan</title>
-    <meta name="description" content="">
+    <title>Webodex - Booster votre productivité grâce au Web</title>
+    <meta name="description" content="Webodex - Gagnez en productivité grâce au Web">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
@@ -36,14 +36,13 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#features">Features</a></li>
-                                <li><a href="#assets">Assets</a></li>
-                                <li><a href="#blog">Blog</a></li>
-                                <li><a href="#download">Download</a></li>
+                                <li><a href="#features">Plateforme</a></li>
+                                <li><a href="#assets">Communauté</a></li>
+                                <li><a href="#blog">Web audits (gratuits)</a></li>
+                                <li><a href="#blog">Feedbacks</a></li>
                             </ul>
                             <ul class="member-actions">
-                                <li><a href="#download" class="login">Log in</a></li>
-                                <li><a href="#download" class="btn-white btn-small">Sign up</a></li>
+                                <li><a href="#download" class="btn-white btn-small">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -57,16 +56,16 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
-                        <h1>Design, collaborate, win!</h1>
-                        <p class="intro">Introducing “Sedna”. A responsive one page website, designed & developed by Peter Finlan, exclusively for Codrops.</p>
-                        <a href="#" class="btn btn-fill btn-large btn-margin-right">Download</a> <a href="#" class="btn btn-accent btn-large">Learn more</a>
+                        <h1>Le web évolue : profitez-en !</h1>
+                        <p class="intro">Quelle que soit votre activité, Webodex simplifie votre quotidien en vous proposant<br />les meilleurs outils disponibles en deux clics dans votre navigateur web.</p>
+                        <a href="#" class="btn btn-fill btn-large btn-margin-right">Commencez ici, c'est gratuit (à venir)</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="down-arrow floating-arrow"><a href="#"><i class="fa fa-angle-down"></i></a></div>
+        <div class="down-arrow floating-arrow"><a href="#intro"><i class="fa fa-angle-down"></i></a></div>
     </section>
-    <section class="intro section-padding">
+    <section class="intro section-padding" id="intro">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 intro-feature">
@@ -74,7 +73,7 @@
                         <span data-icon="&#xe033;" class="icon"></span>
                     </div>
                     <div class="intro-content">
-                        <h5>Easily Customised</h5>
+                        <h5>Une plateforme web simple</h5>
                         <p>Easily customise Sedna to suit your start up, portfolio or product. Take advantage of the layered Sketch file and bring your product to life.</p>
                     </div>
                 </div>
@@ -83,7 +82,7 @@
                         <span data-icon="&#xe030;" class="icon"></span>
                     </div>
                     <div class="intro-content">
-                        <h5>Modern Design</h5>
+                        <h5>Une communauté, des experts</h5>
                         <p>Designed with modern trends and techniques in mind, Sedna will help your product stand out in an already saturated market.</p>
                     </div>
                 </div>
@@ -92,7 +91,7 @@
                         <span data-icon="&#xe046;" class="icon"></span>
                     </div>
                     <div class="intro-content last">
-                        <h5>Responsive Development</h5>
+                        <h5>Des web audits (gratuits)</h5>
                         <p>Built using the latest web technologies like html5, css3, and jQuery, rest assured Sedna will look smashing on every device under the sun.</p>
                     </div>
                 </div>
@@ -320,16 +319,15 @@
                             <li><a href="#">Features</a></li>
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">Sign up</a></li>
-                            <li><a href="http://tympanus.net/codrops/licensing/">Licence</a></li>
-                            <li><a href="http://tympanus.net/codrops/">Codrops</a></li>
-                            <li><a href="http://www.peterfinlan.com/">Peter Finlan</a></li>
+                            <li><a href="#">Licence</a></li>
+                            <li><a href="#">Codrops</a></li>
                         </ul>
-                        <p>Copyright © 2015 <a href="#">Sedna</a><br>
-                        <a href="http://tympanus.net/codrops/licensing/">Licence</a> | Crafted with <span class="fa fa-heart pulse2"></span> by <a href="http://www.peterfinlan.com/">Peter Finlan</a>.</p>
+                        <p>Copyright © 2015, <a href="#">Webodex</a><br>
+                        Fait avec <span class="fa fa-heart pulse2"></span> par <a href="http://bserem.es" target="_blank">Boris Sérèmes-Damal</a>.</p>
                     </div>
                 </div>
                 <div class="social-share">
-                    <p>Share Sedna with your friends</p>
+                    <p>Webodex sur les réseaux sociaux</p>
                     <a href="https://twitter.com/peterfinlan" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
