Changer les textes #1

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
+
 <body id="top">
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -36,9 +37,9 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#features">Plateforme</a></li>
-                                <li><a href="#assets">Communauté</a></li>
-                                <li><a href="#blog">Web audits (gratuits)</a></li>
+                                <li><a href="#features">Web 2.0</a></li>
+                                <li><a href="#features">Notre plateforme</a></li>
+                                <li><a href="#assets">Nos services</a></li>
                                 <li><a href="#blog">Feedbacks</a></li>
                             </ul>
                             <ul class="member-actions">
@@ -56,15 +57,16 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
-                        <h1>Le web évolue : profitez-en !</h1>
+                        <h1>Prenez l'ascenceur !</h1>
                         <p class="intro">Quelle que soit votre activité, Webodex simplifie votre quotidien en vous proposant<br />les meilleurs outils disponibles en deux clics dans votre navigateur web.</p>
-                        <a href="#" class="btn btn-fill btn-large btn-margin-right">Commencez ici, c'est gratuit (à venir)</a>
+                        <a href="#" class="btn btn-fill btn-large btn-margin-right">Utiliser la plateforme (gratuit)</a> <a href="#" class="btn btn-accent btn-large">Réserver un Web Audit (gratuit)</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="down-arrow floating-arrow"><a href="#intro"><i class="fa fa-angle-down"></i></a></div>
     </section>
+
     <section class="intro section-padding" id="intro">
         <div class="container">
             <div class="row">
@@ -82,7 +84,7 @@
                         <span data-icon="&#xe030;" class="icon"></span>
                     </div>
                     <div class="intro-content">
-                        <h5>Une communauté, des experts</h5>
+                    <h5>Des Web Audits gratuits</h5>
                         <p>Designed with modern trends and techniques in mind, Sedna will help your product stand out in an already saturated market.</p>
                     </div>
                 </div>
@@ -91,28 +93,29 @@
                         <span data-icon="&#xe046;" class="icon"></span>
                     </div>
                     <div class="intro-content last">
-                        <h5>Des web audits (gratuits)</h5>
+                        <h5>Du Web Coaching</h5>
                         <p>Built using the latest web technologies like html5, css3, and jQuery, rest assured Sedna will look smashing on every device under the sun.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <section class="features section-padding" id="features">
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-md-offset-7">
                     <div class="feature-list">
-                        <h3>Sedna will drive your product forward</h3>
-                        <p>Present your product, start up, or portfolio in a beautifully modern way. Turn your visitors in to clients.</p>
+                        <h3>Une plateforme web gratuite</h3>
+                        <p>Peu importe votre navigateur, Webodex met à votre disposition une plateforme qui référence les meilleures applications web pour faciliter votre quotidien.</p>
                         <ul class="features-stack">
                             <li class="feature-item">
                                 <div class="feature-icon">
                                     <span data-icon="&#xe03e;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>Universal & Responsive</h5>
-                                    <p>Sedna is universal and will look smashing on any device.</p>
+                                    <h5>Réalisez vos tâches</h5>
+                                    <p>La plateforme est disponible sur tout les navigateurs app.webodex.org</p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -120,8 +123,8 @@
                                     <span data-icon="&#xe040;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>User Centric Design</h5>
-                                    <p>Sedna takes advantage of common design patterns, allowing for a seamless experience for users of all levels.</p>
+                                    <h5>Innovez dans vos méthodes</h5>
+                                    <p>Grâce à une liste de tâches </p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -129,7 +132,16 @@
                                     <span data-icon="&#xe03c;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>Clean reusable code</h5>
+                                    <h5>Centralisez votre veille</h5>
+                                    <p>Boîte mail poluée par des newsletters </p>
+                                </div>
+                            </li>
+                            <li class="feature-item">
+                                <div class="feature-icon">
+                                    <span data-icon="&#xe03c;" class="icon"></span>
+                                </div>
+                                <div class="feature-content">
+                                    <h5>Trouver des experts</h5>
                                     <p>Download and re-use the Sedna open source code for any other project you like.</p>
                                 </div>
                             </li>
@@ -146,6 +158,7 @@
         </div>
         <div class="responsive-feature-img"><img src="img/devices.png" alt="responsive devices"></div>
     </section>
+
     <section class="features-extra section-padding" id="assets">
         <div class="container">
             <div class="row">
@@ -163,6 +176,7 @@
         <div class="macbook-wrap wp3"></div>
         <div class="responsive-feature-img"><img src="img/macbook-pro.png" alt="responsive devices"></div>
     </section>
+
     <section class="hero-strip section-padding">
         <div class="container">
             <div class="col-md-12 text-center">
@@ -175,6 +189,7 @@
             </div>
         </div>
     </section>
+
     <section class="blog-intro section-padding" id="blog">
         <div class="container">
             <div class="row">
@@ -194,6 +209,7 @@
             </div>
         </div>
     </section>
+
     <section class="blog text-center">
         <div class="container-fluid">
             <div class="row">
@@ -255,6 +271,7 @@
             </div>
         </div>
     </section>
+
     <section class="testimonial-slider section-padding text-center">
         <div class="container">
             <div class="row">
@@ -282,6 +299,7 @@
             </div>
         </div>
     </section>
+
     <section class="sign-up section-padding text-center" id="download">
         <div class="container">
             <div class="row">
@@ -301,6 +319,7 @@
             </div>
         </div>
     </section>
+
     <section class="to-top">
         <div class="container">
             <div class="row">
@@ -310,6 +329,7 @@
             </div>
         </div>
     </section>
+
     <footer>
         <div class="container">
             <div class="row">
@@ -333,6 +353,7 @@
             </div>
         </div>
     </footer>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="bower_components/retina.js/dist/retina.js"></script>
