Changer les textes #2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#features">Web 2.0</a></li>
+                                <li><a href="#features">Notre objectif</a></li>
                                 <li><a href="#features">Notre plateforme</a></li>
                                 <li><a href="#assets">Nos services</a></li>
                                 <li><a href="#blog">Feedbacks</a></li>
@@ -75,8 +75,8 @@
                         <span data-icon="&#xe033;" class="icon"></span>
                     </div>
                     <div class="intro-content">
-                        <h5>Une plateforme web simple</h5>
-                        <p>Easily customise Sedna to suit your start up, portfolio or product. Take advantage of the layered Sketch file and bring your product to life.</p>
+                        <h5>Une plateforme web</h5>
+                        <p>Gratuite et acessible, la plateforme Webodex vous permet découvrir, trouver et partager les meilleurs applications du web.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -84,8 +84,8 @@
                         <span data-icon="&#xe030;" class="icon"></span>
                     </div>
                     <div class="intro-content">
-                    <h5>Des Web Audits gratuits</h5>
-                        <p>Designed with modern trends and techniques in mind, Sedna will help your product stand out in an already saturated market.</p>
+                    <h5>Des Web Audits</h5>
+                        <p>Envie de booster radicalement votre projet ? Webodex écoute votre problématique puis vous suggère une suite d'outils web afin de vous simplifier le quotidien.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -165,8 +165,8 @@
                 <div class="col-md-5">
                     <div class="feature-list">
                         <h3>Designed with Sketch!</h3>
-                        <p>Easily change/switch/swap every placeholder inside every image on Sedna with the included Sketch files. You’ll have this template customised to suit your business in no time! </p>
-                        <p>Nam vehicula malesuada lectus, interdum fringilla nibh. Duis aliquam vitae metus a pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fermentum augue quis augue ornare, eget faucibus felis pharetra. Proin condimentum et leo quis fringilla.
+                        <p>En tant que Fondateur de Webodex, j'ai, comme tout entrepreneur, été rapidement confronté à de nombreuses tâches que je ne maitrisais que très peu, voire pas du tout ("Rédiger et organiser des documents, "Développer un site vitrine", "Développer une application web", etc...)</p>
+                        <p>En tant que Passionné du Web, je découvre tous les jours de nombreuses applications web sur plusieurs types de tâches.
                         </p>
                         <a href="#" class="btn btn-ghost btn-accent btn-small">What's Sketch?</a>
                     </div>
@@ -304,16 +304,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h3>Get started with Sedna, absolutely free</h3>
-                    <p>Grab your copy today, exclusively from Codrops</p>
+                    <h3>Professionnels, nous vous contactons</h3>
+                    <p>Renseignez nous de vos coordonnées, et nous vous contacterons au plus vite<br/>
+                    Ceci n'est pas une newsletter !</p>
                     <form class="signup-form" action="#" method="POST" role="form">
                         <div class="form-input-group">
-                            <i class="fa fa-envelope"></i><input type="text" class="" placeholder="Enter your email" required>
+                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Nom" required>
                         </div>
                         <div class="form-input-group">
-                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Enter your password" required>
+                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Entreprise" required>
                         </div>
-                        <button type="submit" class="btn-fill sign-up-btn">Sign up for free</button>
+                        <div class="form-input-group">
+                            <i class="fa fa-envelope"></i><input type="text" class="" placeholder="Email" required>
+                        </div>
+                        <div class="form-input-group">
+                            <i class="fa fa-lock"></i><input type="text" class="" placeholder="Téléphone" required>
+                        </div>
+                        <button type="submit" class="btn-fill sign-up-btn">Je veux être contacté</button>
                     </form>
                 </div>
             </div>
