Changer les textes #3

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
-                        <h1>Prenez l'ascenceur !</h1>
+                        <h1>Prenez l'ascenseur !</h1>
                         <p class="intro">Quelle que soit votre activité, Webodex simplifie votre quotidien en vous proposant<br />les meilleurs outils disponibles en deux clics dans votre navigateur web.</p>
                         <a href="#" class="btn btn-fill btn-large btn-margin-right">Utiliser la plateforme (gratuit)</a> <a href="#" class="btn btn-accent btn-large">Réserver un Web Audit (gratuit)</a>
                     </div>
