--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!--Start of Zopim Live Chat Script-->
+    <script type="text/javascript">
+    window.$zopim||(function(d,s){var z=$zopim=function(c){
+    z._.push(c)},$=z.s=
+    d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+    _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+    $.src='//v2.zopim.com/?3OTCMlZQ9zCDsqAyjsMZFvxTaGDcUvR5';z.t=+new Date;$.
+    type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+    </script>
+    <!--End of Zopim Live Chat Script-->
 </head>
 
 <body id="top">
@@ -76,7 +86,7 @@
                     </div>
                     <div class="intro-content">
                         <h5>Une plateforme web</h5>
-                        <p>Gratuite et acessible, la plateforme Webodex vous permet découvrir, trouver et partager les meilleurs applications du web.</p>
+                        <p>Gratuite et acessible, la plateforme Webodex vous permet de découvrir, trouver et partager les meilleures applications du web classées par utilité.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -85,7 +95,7 @@
                     </div>
                     <div class="intro-content">
                     <h5>Des Web Audits</h5>
-                        <p>Envie de booster radicalement votre projet ? Webodex écoute votre problématique puis vous suggère une suite d'outils web afin de vous simplifier le quotidien.</p>
+                        <p>Envie de booster radicalement votre projet ? Les auditeurs Webodex sont à votre écoute afin de vous suggérer une suite d'outils web afin de simplifier votre quotidien.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -94,7 +104,7 @@
                     </div>
                     <div class="intro-content last">
                         <h5>Du Web Coaching</h5>
-                        <p>Built using the latest web technologies like html5, css3, and jQuery, rest assured Sedna will look smashing on every device under the sun.</p>
+                        <p>Conscient du gain de temps et d'argent, mais moins confiant sur la mise en place d'une suite d'outils web ? Les coachs Webodex vous accompagnent lors du changement.</p>
                     </div>
                 </div>
             </div>
@@ -106,15 +116,15 @@
             <div class="row">
                 <div class="col-md-5 col-md-offset-7">
                     <div class="feature-list">
-                        <h3>Une plateforme web gratuite</h3>
-                        <p>Peu importe votre navigateur, Webodex met à votre disposition une plateforme qui référence les meilleures applications web pour faciliter votre quotidien.</p>
+                        <h3>La plateforme à tout faire</h3>
+                        <p>Peu importe votre navigateur, Webodex met à votre disposition une plateforme qui référence les meilleures applications du web pour faciliter votre quotidien.</p>
                         <ul class="features-stack">
                             <li class="feature-item">
                                 <div class="feature-icon">
                                     <span data-icon="&#xe03e;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>Réalisez vos tâches</h5>
+                                    <h5>Réalisez vos tâches grâce au web</h5>
                                     <p>La plateforme est disponible sur tout les navigateurs app.webodex.org</p>
                                 </div>
                             </li>
@@ -132,17 +142,8 @@
                                     <span data-icon="&#xe03c;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>Centralisez votre veille</h5>
+                                    <h5>Centralisez votre veille web</h5>
                                     <p>Boîte mail poluée par des newsletters </p>
-                                </div>
-                            </li>
-                            <li class="feature-item">
-                                <div class="feature-icon">
-                                    <span data-icon="&#xe03c;" class="icon"></span>
-                                </div>
-                                <div class="feature-content">
-                                    <h5>Trouver des experts</h5>
-                                    <p>Download and re-use the Sedna open source code for any other project you like.</p>
                                 </div>
                             </li>
                         </ul>
@@ -280,17 +281,17 @@
                         <ul class="slides">
                             <li>
                                 <div class="avatar"><img src="img/avatar.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Lorem ipsum dolor sit amet, nullam lucia nisi."</h2>
+                                <h2>"C'est fou ce que l'on peut faire avec un navigateur web de nos jours ! Webodex nous a remis à jour"</h2>
                                 <p class="author">Peter Finlan, Product Designer.</p>
                             </li>
                             <li>
                                 <div class="avatar"><img src="img/mani.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Nunc vel maximus purus. Nullam ac urna ornare."</h2>
+                                <h2>"Le Google de la productivité"</h2>
                                 <p class="author">Manoela Ilic, Founder @ Codrops.</p>
                             </li>
                             <li>
                                 <div class="avatar"><img src="img/130.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Nullam ac urna ornare, ultrices nisl ut, lacinia nisi."</h2>
+                                <h2>"Le succès de Webodex est basé sur votre réussite"</h2>
                                 <p class="author">Blaz Robar, Pixel Guru</p>
                             </li>
                         </ul>
@@ -304,7 +305,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h3>Professionnels, nous vous contactons</h3>
+                    <h3>Professionnels, rentrons en contact</h3>
                     <p>Renseignez nous de vos coordonnées, et nous vous contacterons au plus vite<br/>
                     Ceci n'est pas une newsletter !</p>
                     <form class="signup-form" action="#" method="POST" role="form">
@@ -355,7 +356,7 @@
                 </div>
                 <div class="social-share">
                     <p>Webodex sur les réseaux sociaux</p>
-                    <a href="https://twitter.com/peterfinlan" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/webodex" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
         </div>
@@ -370,14 +371,14 @@
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="bower_components/classie/classie.js"></script>
     <script src="bower_components/jquery-waypoints/lib/jquery.waypoints.min.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
     <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
     e.src='//www.google-analytics.com/analytics.js';
     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');-->
     </script>
 </body>
 </html>
