Changer les textes #5

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
-                                <li><a href="#features">Notre objectif</a></li>
-                                <li><a href="#features">Notre plateforme</a></li>
-                                <li><a href="#assets">Nos services</a></li>
+                                <li><a href="#features">Plateforme</a></li>
+                                <li><a href="#assets">Service</a></li>
                                 <li><a href="#blog">Feedbacks</a></li>
+                                <li><a href="https://medium.com/@webodex" target="_blank">Blog</a></li>
                             </ul>
                             <ul class="member-actions">
                                 <li><a href="#download" class="btn-white btn-small">Contact</a></li>
@@ -68,7 +68,7 @@
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
                         <h1>Prenez l'ascenseur !</h1>
-                        <p class="intro">Quelle que soit votre activité, Webodex simplifie votre quotidien en vous proposant<br />les meilleurs outils disponibles en deux clics dans votre navigateur web.</p>
+                        <p class="intro">Quelle que soit votre activité, Webodex vous aide à réaliser vos tâches en vous proposant<br />les meilleurs applications disponibles dans votre navigateur web.</p>
                         <a href="#" class="btn btn-fill btn-large btn-margin-right">Utiliser la plateforme (gratuit)</a> <a href="#" class="btn btn-accent btn-large">Réserver un Web Audit (gratuit)</a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="intro-content">
                         <h5>Une plateforme web</h5>
-                        <p>Gratuite et acessible, la plateforme Webodex vous permet de découvrir, trouver et partager les meilleures applications du web classées par utilité.</p>
+                        <p>Gratuite et acessible, la plateforme Webodex vous permet de découvrir, trouver et partager les meilleures applications du web, avec le soutient de la communauté.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -95,7 +95,7 @@
                     </div>
                     <div class="intro-content">
                     <h5>Des Web Audits</h5>
-                        <p>Envie de booster radicalement votre projet ? Les auditeurs Webodex sont à votre écoute afin de vous suggérer une suite d'outils web afin de simplifier votre quotidien.</p>
+                        <p>Nos <em>Web auditeurs</em>, tous entrepreneurs et passionnés du web, sont gratuitement à votre écoute afin de vous suggérer parmi les meilleurs outils pour répondre à vos besoins.</p>
                     </div>
                 </div>
                 <div class="col-md-4 intro-feature">
@@ -104,7 +104,7 @@
                     </div>
                     <div class="intro-content last">
                         <h5>Du Web Coaching</h5>
-                        <p>Conscient du gain de temps et d'argent, mais moins confiant sur la mise en place d'une suite d'outils web ? Les coachs Webodex vous accompagnent lors du changement.</p>
+                        <p>Nos <em>Web coachs</em> vous proposent plusieurs formules d'accompagnement ou de conseil personnalisé en fonction de votre activité et de vos disponibilités.</p>
                     </div>
                 </div>
             </div>
@@ -116,8 +116,8 @@
             <div class="row">
                 <div class="col-md-5 col-md-offset-7">
                     <div class="feature-list">
-                        <h3>La plateforme à tout faire</h3>
-                        <p>Peu importe votre navigateur, Webodex met à votre disposition une plateforme qui référence les meilleures applications du web pour faciliter votre quotidien.</p>
+                        <h3>Des outils web sur une plateforme web</h3>
+                        <p>Webodex, c'est avant tout une plateforme qui référence les meilleures applications utilisables sur tout navigateur web récent.</p>
                         <ul class="features-stack">
                             <li class="feature-item">
                                 <div class="feature-icon">
@@ -125,7 +125,7 @@
                                 </div>
                                 <div class="feature-content">
                                     <h5>Réalisez vos tâches grâce au web</h5>
-                                    <p>La plateforme est disponible sur tout les navigateurs app.webodex.org</p>
+                                    <p>Rechercher une tâche : la plateforme vous répondra une liste d'outils vous permettant de la réaliser.</p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -133,8 +133,8 @@
                                     <span data-icon="&#xe040;" class="icon"></span>
                                 </div>
                                 <div class="feature-content">
-                                    <h5>Innovez dans vos méthodes</h5>
-                                    <p>Grâce à une liste de tâches </p>
+                                    <h5>Découvrez et partagez des méthodes</h5>
+                                    <p>Grâce à sa communauté, la plateforme propose des combinaisons d'outils innovants afin de  réaliser certaines tâches souvent ennuyeuses et chronophages.</p>
                                 </div>
                             </li>
                             <li class="feature-item">
@@ -143,7 +143,7 @@
                                 </div>
                                 <div class="feature-content">
                                     <h5>Centralisez votre veille web</h5>
-                                    <p>Boîte mail poluée par des newsletters </p>
+                                    <p>Evitez de vous inscrire à 1M de newsletters et centralisez votre veille sur les outils que nous référençons <em>(compte gratuit requis)</em>.</p>
                                 </div>
                             </li>
                         </ul>
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="feature-list">
-                        <h3>Designed with Sketch!</h3>
+                        <h3>Des outils web sur une plateforme web</h3>
                         <p>En tant que Fondateur de Webodex, j'ai, comme tout entrepreneur, été rapidement confronté à de nombreuses tâches que je ne maitrisais que très peu, voire pas du tout ("Rédiger et organiser des documents, "Développer un site vitrine", "Développer une application web", etc...)</p>
                         <p>En tant que Passionné du Web, je découvre tous les jours de nombreuses applications web sur plusieurs types de tâches.
                         </p>
@@ -286,13 +286,13 @@
                             </li>
                             <li>
                                 <div class="avatar"><img src="img/mani.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Le Google de la productivité"</h2>
+                                <h2>"Le Google de la productivité et du DoItYourself"</h2>
                                 <p class="author">Manoela Ilic, Founder @ Codrops.</p>
                             </li>
                             <li>
                                 <div class="avatar"><img src="img/130.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h2>"Le succès de Webodex est basé sur votre réussite"</h2>
-                                <p class="author">Blaz Robar, Pixel Guru</p>
+                                <h2>"Une vulgarisation du web qui fait vraiment gagner du temps"</h2>
+                                <p class="author">Rudy Giorgi, Fondateur de <a href="http://www.eurao.com/">Eurao</a></p>
                             </li>
                         </ul>
                     </div>
@@ -356,7 +356,7 @@
                 </div>
                 <div class="social-share">
                     <p>Webodex sur les réseaux sociaux</p>
-                    <a href="https://twitter.com/webodex" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/webodex" target="_blank" class="twitter-share"><i class="fa fa-twitter"></i></a> <a href="#" class="facebook-share"><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
         </div>
