Changer les textes #5 + image + logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="navigation">
             <header>
                 <div class="header-content">
-                    <div class="logo"><a href="#"><img src="img/sedna-logo.png" alt="Sedna logo"></a></div>
+                    <div class="logo"><a href="#"><img src="img/webodex-logo-mini.png" alt="Sedna logo"></a></div>
                     <div class="header-nav">
                         <nav>
                             <ul class="primary-nav">
@@ -67,8 +67,8 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
-                        <h1>Prenez l'ascenseur !</h1>
-                        <p class="intro">Quelle que soit votre activité, Webodex vous aide à réaliser vos tâches en vous proposant<br />les meilleurs applications disponibles dans votre navigateur web.</p>
+                        <h1>WEBODEX</h1>
+                        <p class="intro">Boostez votre activité grâce à votre navigateur web</p>
                         <a href="#" class="btn btn-fill btn-large btn-margin-right">Utiliser la plateforme (gratuit)</a> <a href="#" class="btn btn-accent btn-large">Réserver un Web Audit (gratuit)</a>
                     </div>
                 </div>
